<resources>
    <string name="app_name">SETAPP</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Now.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_activity_device_type">Choose device type</string>
    <string name="select_device_type">Select desired device type:</string>
    <string name="confirm_btn">Confirm</string>
    <string name="main_tasks">Main Tasks</string>
    <string name="setup_new_photon">Setup New Photon</string>
    <string name="view_all_devices">View All Devices</string>
    <string name="settings">Settings</string>
    <string name="advanced">Advanced</string>
    <string name="log_out">Log Out</string>
    <string name="list_device_id">Device ID</string>
    <string name="list_device_type">Device Type</string>

    <string name="btn_if">IF</string>
    <string name="btn_then">THEN</string>

    <!-- Strings for the Lights Control -->
    <string name="light_control_heading">Light Control</string>
    <string name="actuators">Actuators</string>
    <string name="colour_text">Colour</string>
    <string name="brightness_text">Brightness</string>
    <string name="button_off_text">Off</string>
    <string name="button_all_text">All Bulbs</string>
    <string name="button_group_one_text">Group 1</string>
    <string name="button_group_two_text">Group 2</string>
    <string name="button_group_three_text">Group 3</string>
    <string name="button_group_four_text">Group 4</string>
    <!-- Strings for the Kettle Control -->
    <string name="kettle_control_heading">Kettle Control</string>
    <string name="button_kettle_on_off">On/Off</string>
    <string name="button_kettle_65">Boil 65</string>
    <string name="button_kettle_80">Boil 80</string>
    <string name="button_kettle_95">Boil 95</string>
    <string name="button_kettle_100">Boil 100</string>
    <string name="button_kettle_w5">Warm 5</string>
    <string name="button_kettle_w10">Warm 10</string>
    <string name="button_kettle_w20">Warm 20</string>
    <!-- Strings for the Smart Plug Control -->
    <string name="smart_plug_heading">Smart Plug</string>
    <string name="button_smart_plug">On/Off</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_env">User Environment</string>

    <string name="ue_btn_customize">Customize</string>
    <string name="ue_btn_done">Done</string>
    <string name="photon_logo">Photon Logo</string>
    <string name="devState">Device State</string>
    <string name="photon_id">Photon ID: </string>
    <string name="last_heard">Last Heard: </string>
    <string name="status">Status: </string>
    <string name="device_id">Device id: </string>
    <string name="view_weekly_data">View Weekly Data</string>
    <string name="view_monthly_data">View Monthly Data</string>
    <string name="live_temp">Live Temp</string>
    <string name="live_sound">Live Sound</string>
    <string name="live_humid">Live Humid</string>
    <string name="ble_not_supported">BLE not supported. Location feature disabled.</string>
    <string name="arm_disarm">Arm/Disarm</string>
    <string name="arm_or_disarm_system">Arm or Disarm System</string>
</resources>
