<!--
  ~ Copyright (c) 26. 2. 2018. Orber Soares Bom Jesus
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sunicola.setapp.fragments.PhotonFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/photonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photon_id"
        android:textAlignment="textStart"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/photonStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textAlignment="textStart"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/photonLastHeard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_heard"
        android:textAlignment="textStart"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/weekRadioBtn"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_weekly_data"
            android:textAlignment="textStart"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/monthRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_monthly_data"
            android:textAlignment="textStart"
            android:textSize="12sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_weight="1" />
    </RadioGroup>

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="258dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.jjoe64.graphview.GraphView
                        android:id="@+id/graphTemp"
                        android:layout_width="match_parent"
                        android:layout_height="200dip" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.jjoe64.graphview.GraphView
                        android:id="@+id/graphSound"
                        android:layout_width="match_parent"
                        android:layout_height="200dip" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.jjoe64.graphview.GraphView
                        android:id="@+id/graphLight"
                        android:layout_width="match_parent"
                        android:layout_height="200dip" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>
    <LinearLayout
        android:id="@+id/liveData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/liveTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/live_temp" />

        <EditText
            android:id="@+id/liveSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/live_sound" />

        <EditText
            android:id="@+id/liveLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/live_humid" />
    </LinearLayout>

</LinearLayout>
