<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sunicola.setapp.fragments.ActuatorsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/light_heading"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/light_control_heading"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_colour"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_marginTop="24dp"
                android:text="@string/colour_text"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/light_heading" />

            <SeekBar
                android:id="@+id/seek_colour"
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:layout_marginStart="11dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_colour" />

            <TextView
                android:id="@+id/text_brightness"
                android:layout_width="96dp"
                android:layout_height="27dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:text="@string/brightness_text"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seek_colour" />

            <SeekBar
                android:id="@+id/seek_brightness"
                android:layout_width="400dp"
                android:layout_height="50dp"
                android:layout_marginStart="11dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_brightness" />

            <Button
                android:id="@+id/button_off"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/button_off_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_all" />

            <Button
                android:id="@+id/button_all"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/button_all_text"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_group_three" />

            <Button
                android:id="@+id/button_group_one"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/button_group_one_text"
                app:layout_constraintEnd_toStartOf="@+id/button_group_two"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seek_brightness" />

            <Button
                android:id="@+id/button_group_three"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/button_group_three_text"
                app:layout_constraintEnd_toStartOf="@+id/button_group_four"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_group_one" />

            <Button
                android:id="@+id/button_group_two"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/button_group_two_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_group_one"
                app:layout_constraintTop_toBottomOf="@+id/seek_brightness" />

            <Button
                android:id="@+id/button_group_four"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/button_group_four_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_group_three"
                app:layout_constraintTop_toBottomOf="@+id/button_group_two" />

            <TextView
                android:id="@+id/kettle_heading"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/kettle_control_heading"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_off" />

            <Button
                android:id="@+id/button_kettle_on"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/button_kettle_on"
                app:layout_constraintEnd_toStartOf="@+id/button_kettle_off"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/kettle_heading" />

            <Button
                android:id="@+id/button_kettle_off"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/button_kettle_off"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_kettle_on"
                app:layout_constraintTop_toBottomOf="@+id/kettle_heading" />

            <Button
                android:id="@+id/button_65"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/holo_blue_bright"
                android:focusableInTouchMode="true"
                android:text="@string/button_kettle_65"
                app:layout_constraintEnd_toStartOf="@+id/button_80"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_kettle_on" />

            <Button
                android:id="@+id/button_80"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/button_kettle_80"
                app:layout_constraintEnd_toStartOf="@+id/button_95"
                app:layout_constraintStart_toEndOf="@+id/button_65"
                app:layout_constraintTop_toBottomOf="@+id/button_kettle_on" />

            <Button
                android:id="@+id/button_95"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/button_kettle_95"
                app:layout_constraintEnd_toStartOf="@+id/button_100"
                app:layout_constraintStart_toEndOf="@+id/button_80"
                app:layout_constraintTop_toBottomOf="@+id/button_kettle_on" />

            <Button
                android:id="@+id/button_100"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/button_kettle_100"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_95"
                app:layout_constraintTop_toBottomOf="@+id/button_kettle_on" />

            <Button
                android:id="@+id/button_w5"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/button_kettle_w5"
                app:layout_constraintEnd_toStartOf="@+id/button_w10"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_65" />

            <Button
                android:id="@+id/button_w10"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/button_kettle_w10"
                app:layout_constraintEnd_toStartOf="@+id/button_w20"
                app:layout_constraintStart_toEndOf="@+id/button_w5"
                app:layout_constraintTop_toBottomOf="@+id/button_65" />

            <Button
                android:id="@+id/button_w20"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/button_kettle_w20"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_w10"
                app:layout_constraintTop_toBottomOf="@+id/button_65" />

            <TextView
                android:id="@+id/smart_plug_heading"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/smart_plug_heading"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_w5" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</FrameLayout>
